<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.Guideline
        android:id="@+id/base_search_fragment_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <EditText
        android:id="@+id/base_search_fragment_query"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/searchQueryTerm"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/base_search_fragment_text_beginDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="16sp"
        android:text="@string/beginDate"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_query"/>

    <EditText
        android:id="@+id/base_search_fragment_edit_begin_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="gone"
        android:focusable="false"
        android:clickable="false"
        android:inputType="date"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/base_search_fragment_guideline"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_text_beginDate"
        tools:ignore="AutoFill, labelFor" />

    <TextView
        android:id="@+id/base_search_fragment_text_endDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="16sp"
        android:text="@string/endDate"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toRightOf="@id/base_search_fragment_guideline"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_query"/>

    <EditText
        android:id="@+id/base_search_fragment_edit_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="gone"
        android:focusable="false"
        android:clickable="false"
        android:inputType="date"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toRightOf="@id/base_search_fragment_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_text_endDate"
        tools:ignore="AutoFill, labelFor"/>

    <CheckBox
        android:id="@+id/base_search_fragment_checkbox_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_edit_begin_date" />


    <CheckBox
        android:id="@+id/base_search_fragment_checkbox_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_checkbox_one" />

    <CheckBox
        android:id="@+id/base_search_fragment_checkbox_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_checkbox_two"/>

    <CheckBox
        android:id="@+id/base_search_fragment_checkbox_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@id/base_search_fragment_guideline"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_edit_end_date" />

    <CheckBox
        android:id="@+id/base_search_fragment_checkbox_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@id/base_search_fragment_guideline"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_checkbox_four" />

    <CheckBox
        android:id="@+id/base_search_fragment_checkbox_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@id/base_search_fragment_guideline"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_checkbox_five" />

    <Button
        android:id="@+id/base_search_fragment_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="18sp"
        android:text="@string/searchButton"
        android:padding="12sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_checkbox_three"
        tools:targetApi="LOLLIPOP"/>

    <ImageView
        android:id="@+id/base_search_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/base_search_fragment_checkbox_three"
        android:background="@android:color/darker_gray"
        tools:ignore="ContentDescription"/>

    <Switch
        android:id="@+id/base_search_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="18sp"
        android:text="@string/enableNotifications"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/base_search_divider"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>