...
    <!-- Used for the Fragment ResultQuery -->
    <string name="toastNoResult">There is no result for your request \"%1$s\" with the dates
        and categories chosen."</string>

    <!-- Used for the Fragment Notifications -->
    <string name="enableNotifications">Enable notifications (once per day)</string>
    <string name="activatedNotifications">Notifications are ACTIVATED.</string>
    <string name="canceledNotifications">Notifications are CANCELED.</string>

    <!-- Used for the NotificationReceiver -->
    <string name="zeroArticle">Today there isn\'t new article for your request.</string>
    <string name="oneArticle">Today there is %1$d new article for your request.</string>
    <string name="articles">Today there are %1$d new articles for your request.</string>

...
