...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_news_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_news_swipe_container"
        app:layout_constraintRight_toRightOf="@+id/fragment_news_swipe_container"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_news_swipe_container"
        app:layout_constraintTop_toTopOf="@+id/fragment_news_swipe_container">
...
